--- a/style/main.css
+++ b/style/main.css
@@ -501,8 +501,8 @@ hr {
 
 .tile.tile-2048 .tile-inner {
     font-size: 0px;
-    background-image: url('../img/baby.jpg');
-    /* use ../baby.jpg for fall */
+    background-image: url('../img/Baby.jpg');
+    /* use ../Baby.jpg for fall */
     background-size: cover;
     /* box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); */
 }
